# fortress

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  project
docs/: emotions
source/: .keep  CMakeLists.txt  main.cc
source/data/: quality_levels.yaml
source/emotions/: Goal.cc  Goal.h  iGoal.h
source/input/: eventId.h  eventType.h  iContext.h  iEvent.h  input.h  inputAction.h  inputRange.h  inputState.h
source/platform/: application.cc  application.h  event.cc  event.h  inputConstants.h  platform.cc  platform.h  platformEvent.cc  platformEvent.h  platformEventID.h  platformKeyboardEvent.h  rawConversion.cc  rawConversion.h
test/: CMakeLists.txt  main.cxx
