cmake_minimum_required (VERSION 3.5)
project(fortress)

## VERSIONING
set(FORTRESS_VERSION_MAJOR "0")
set(FORTRESS_VERSION_MINOR "0")
set(FORTRESS_VERSION_PATCH "0")
set(FORTRESS_VERSION "${FORTRESS_VERSION_MAJOR}.${FORTRESS_VERSION_MINOR}.${FORTRESS_VERSION_PATCH}")

## OUTPUT PATHS
set(ARTIFACT_DIRECTORY ${CMAKE_SOURCE_DIR}/artifact)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ARTIFACT_DIRECTORY}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ARTIFACT_DIRECTORY}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ARTIFACT_DIRECTORY}/bin)

## MINIMUM C++ VERSION
set (CMAKE_CXX_STANDARD 14)

## THREADING PACKAGE
find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  set(COMPILE_PTHREAD "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  set(LIBRARY_PTHREAD ${CMAKE_THREAD_LIBS_INIT})
endif()

## SHOULD WE BUILD THE TEST LIBRARY?!
option(FORTRESS_TEST "build tests" ON)

## BUILD ALL THE EXTERNAL PROJECTS
add_subdirectory(${CMAKE_SOURCE_DIR}/external)
## Build SOURCE
#add_subdirectory(${CMAKE_SOURCE_DIR}/source)

## test project
if(FORTRESS_TEST)
  add_subdirectory(${CMAKE_SOURCE_DIR}/test)
endif()
